k8s/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-desk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: support-desk
  template:
    metadata:
      labels:
        app: support-desk
    spec:
      containers:
        - name: support-desk
          image: support-desk:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet: 
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet: 
              path: /health
              port: 5000
            initialDelaySeconds: 100
            periodSeconds: 25
          resources:
            requests:
              cpu: "128m"
              memory: "256Mi"
            limits:
              cpu: "256m"
              memory: "512Mi"
