k8s/local/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None # headless: pas de load-balancing, juste un DNS stable par Pod (mysql-0.mysql...)
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
